# FightClub

./: .gitignore  CMakeLists.txt  FightClub.sln
FightClub/: Armors.json  CMakeLists.txt  Equipment.h  FightClub.cpp  FightClub.vcxproj  FightClub.vcxproj.filters  Menu.cpp  Menu.h  Weapon.h  config.txt
FightClub/Battle/: Battle.cpp  Battle.h  HitDirection.cpp
FightClub/CharacterStuff/: AbilitiesDisplayer.cpp  AbilitiesManager.cpp  Armor.h  Attributes.h  AttributesFactory.cpp  AttributesFactory.h  AttributesManager.cpp  CharacterCustomizer.cpp  CharacterCustomizerMenu.cpp  Equipment.cpp  Equipment.h  IAttributesFactory.h  IWeaponStorage.h  Inventory.cpp  InventoryManager.cpp  Weapon.h  WeaponStorage.cpp  WeaponStorage.h
FightClub/CharacterStuff/Armors/: Armor.cpp  Armor.h  ArmorStorage.cpp  ArmorStorage.h  ArmorType.cpp  Armors.h  IArmorStorage.h
FightClub/CharacterStuff/Armors/Cuirasses/: AverageFighterCuirasse.h  PoorManCuirasse.h  RichGuyCuirasse.h
FightClub/CharacterStuff/Armors/Heads/: AverageFighterHat.h  PoorManHat.h  RichGuyHat.h
FightClub/CharacterStuff/Armors/Legs/: AverageFighterLegs.h  PoorManLegs.h  RichGuyLegs.h
FightClub/CharacterStuff/Weapons/: BrassKnucklesWithKnife.h  Claymore.h  Knife.h  PoorBrassKnuckles.h  Rapier.h  Weapon.cpp  WeaponStorage.cpp  WeaponStorage.h
FightClub/Characters/: Character.h  CharacterFactory.cpp  CharacterFactory.h  CharacterType.h  ICharacterFactory.h  Player.cpp  Player.h
FightClub/Characters/Bots/: Bot.cpp  Bot.h  BotFactory.cpp  BotFactory.h  IBotFactory.h
FightClub/Common/: ConfigKeys.h  IConfig.h  RandomGenerator.cpp
FightClub/Common/Configs/: Config.cpp  Config.h  ConfigKeys.cpp  ConfigKeys.h  IPlayerConfig.h  PlayerConfig.cpp  PlayerConfig.h
FightClub/Common/Data/: Armors.json  Weapons.json  file.json
FightClub/Headers/: IMenu.h  Menu.h
FightClub/Headers/Battle/: Battle.h  DamageCalculator.h  HitDirection.h  IBattle.h
FightClub/Headers/CharacterStuff/: AbilitiesDisplayer.h  AbilitiesManager.h  Attributes.h  AttributesFactory.h  AttributesManager.h  CharacterCustomizer.h  CharacterCustomizerMenu.h  DynamicEquipment.h  Equipment.h  IAttributesFactory.h  ICharacterCustomizer.h  ICharacterCustomizerMenu.h  IInventoryManager.h  Inventory.h  InventoryManager.h  StaticEquipment.h
FightClub/Headers/CharacterStuff/Armors/: Armor.h  ArmorStorage.h  ArmorType.h  IArmorStorage.h
FightClub/Headers/CharacterStuff/Weapons/: IWeaponStorage.h  Weapon.h  WeaponStorage.h
FightClub/Headers/Characters/: Character.h  CharacterFactory.h  CharacterType.h  ICharacterFactory.h  Player.h
FightClub/Headers/Characters/Bots/: Bot.h  BotFactory.h  IBotFactory.h
FightClub/Headers/Common/: Commands.h  IntHelper.h  RandomGenerator.h
FightClub/Headers/Common/Configs/: Config.h  ConfigKeys.h  IConfig.h  IPlayerConfig.h  PlayerConfig.h
FightClub/Headers/Exceptions/: invalid_input_type.h
FightClub/Headers/IO/: CommandLineParser.h  ICommandLineParser.h  InputProcesser.h  JsonAttributes.h  MessageDisplayer.h
FightClub/Headers/IO/Savers/: GameDataProcesser.h  JsonGameDataProcesser.h
FightClub/Headers/Models/: UserDataModel.h
FightClub/IO/: CommandLineParser.cpp  InputProcesser.cpp  InputProcesser.h  JsonAttributes.cpp
FightClub/IO/Savers/: GameDataProcesser.h  GameSaver.h  JsonGameDataProcesser.cpp  JsonGameDataProcesser.h  JsonGameSaver.cpp  JsonGameSaver.h
FightClub/Models/: SaveFileModel.h
FightClub/libs/Hypodermic/: ActivatedRegistrationInfo.h  ActivationException.h  ActivationHandlers.h  ActivationRegistry.h  AnyArgument.h  ArgumentResolver.h  As.h  AsSelf.h  AutowireableConstructor.h  AutowireableConstructorRegistrationDescriptor.h  CircularDependencyException.h  ComponentContext.h  ConsoleLoggerSink.h  ConstructorDescriptor.h  ConstructorTypologyDeducer.h  Container.h  ContainerBuilder.h  ContainerInstanceRegistration.h  ContainerInstanceRegistrationActivator.h  DependencyActivationException.h  DependencyFactories.h  ExceptionBase.h  Hypodermic.vcxproj  Hypodermic.vcxproj.filters  ILoggerSink.h  IRegistration.h  IRegistrationScope.h  IRuntimeRegistrationBuilder.h  InstanceAlreadyActivatingException.h  IsComplete.h  IsSupportedArgument.h  Log.h  Logger.h  Named.h  NamedTypeAlias.h  NestedRegistrationScope.h  NoopLoggerSink.h  PersistentInstanceRegistration.h  PointerAlignment.h  ProvidedInstanceFactoryRegistrationDescriptor.h  (+22 more)
Network/: CMakeLists.txt
Network/include/: BaseConnectionClient.hpp  BoostCommon.hpp  HttpClient.hpp  RequestData.hpp  WebsocketClient.hpp
Network/src/: BaseConnectionClient.cpp  HttpClient.cpp  WebsocketClient.cpp
Server/Services/API.Test/: .CMakeLists.txt.swp  CMakeLists.txt  main.cpp
Server/Services/Character.API/: .CMakeLists.txt.swp  CMakeLists.txt  Config.example  main.cpp
Server/Services/Character.API/src/Database/: TableColumnsNames.cpp  TableColumnsNames.hpp
Server/Services/Character.API/src/Enums/: AbilityType.hpp  ArmorType.hpp
Server/Services/Character.API/src/Network/: CharacterController.cpp  CharacterController.hpp
Server/Services/Character.API/src/Scripts/: .CharacterArmors.sql.swp  Abilities.sql  AbilityTypes.sql  ArmorTypes.sql  Armors.sql  Attributes.sql  CharacterAbilities.sql  CharacterArmors.sql  CharacterTypes.sql  CharacterWeapons.sql  Characters.sql  Weapons.sql
Server/Services/Common/: CMakeLists.txt  RabbitQueues.json
Server/Services/Common/include/: ControllerCommon.hpp  EnumClass.hpp  JsonHelpers.hpp  Noncopyable.hpp  OptionalDefinitions.hpp  OptionalHelpers.hpp
Server/Services/Common/include/Config/: ConfigParams.hpp  IConfigReader.hpp  JsonConfigReader.hpp
Server/Services/Common/include/Database/: ConnectionFactory.hpp  (+7 more)
Server/Services/Fight.API/: CMakeLists.txt  Config.example  main.cpp
Server/Services/Fight.API/src/: ConnectionDefinitions.hpp
Server/Services/Gateaway/: CMakeLists.txt  main.cpp
Server/Services/Gateaway/src/: Connection.cpp  Connection.hpp  ConnectionHandler.hpp  JsonAttributes.hpp  ServicesContainer.cpp  ServicesContainer.hpp
Server/Services/User.API/: CMakeLists.txt  Config.example  main.cpp
(+215 files in other folders)
